--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayolee-api",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Rest API for Ayolee Stores application",
   "main": "app.js",
   "engines": {
@@ -15,19 +15,22 @@
   "author": "Farawe Taiwo",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "date-and-time": "^2.0.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-validator": "^6.6.0",
-    "helmet": "^3.23.3",
+    "express-validator": "^6.12.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.8",
-    "mongoose": "^6.0.2",
-    "morgan": "^1.10.0"
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.1.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.12"
   }
 }
