--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "2.0.0",
   "description": "Rest API for Ayolee Stores application",
   "main": "app.js",
-  "engines": {
-    "node": "12.16.3"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -21,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "core-util-is": "^1.0.3",
     "date-and-time": "^2.0.0",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
