--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
   "author": "Farawe Taiwo",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "core-util-is": "^1.0.3",
-    "date-and-time": "^2.0.0",
-    "dayjs": "^1.10.7",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.1",
-    "mongoose": "^6.1.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.12"
+    "date-and-time": "^3.0.1",
+    "dayjs": "^1.11.8",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.3",
+    "morgan": "^1.10.0"
   }
 }
